// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FilterReset /> should render properly with no fields 1`] = `
.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-bottom: 8px;
}

.emotion-0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-1 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 0;
  padding: 4px;
  padding-left: 6px;
  padding-right: 6px;
  border-radius: 2px;
  background-color: #3b3b3b;
  color: #b3b3b3;
  line-height: 19px;
  font-size: 15px;
  font-family: Roboto Condensed;
  text-transform: uppercase;
}

.emotion-1:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-1[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-1:hover,
.emotion-1:focus {
  color: #ffffff;
}

<div
  className="emotion-2"
>
  <div
    className="emotion-0"
  />
  <button
    className="emotion-1"
    onClick={[Function]}
    type="button"
  >
    Reset
  </button>
</div>
`;

exports[`<FilterReset /> should reset properly 1`] = `
.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-bottom: 8px;
}

.emotion-0 {
  padding: 4px;
  padding-left: 6px;
  padding-right: 26px;
  border-radius: 2px;
  background-color: #3b3b3b;
  color: #b3b3b3;
  line-height: 19px;
  font-size: 15px;
  font-family: Roboto Condensed;
  text-transform: uppercase;
  border: none;
  -moz-appearance: none;
  -webkit-appearance: none;
  background-image: url('data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAyMCAyMCI+CiAgPHBhdGggZD0iTTE0LjI0MyA3LjU4NkwxMCAxMS44MjggNS43NTcgNy41ODYgNC4zNDMgOSAxMCAxNC42NTcgMTUuNjU3IDlsLTEuNDE0LTEuNDE0eiIgZmlsbD0iI2IzYjNiMyIgLz4KPC9zdmc+');
  background-repeat: no-repeat,repeat;
  background-position: right top -2px;
  cursor: pointer;
}

.emotion-0:hover,
.emotion-0:focus {
  color: #ffffff;
  background-image: url('data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAyMCAyMCI+CiAgPHBhdGggZD0iTTE0LjI0MyA3LjU4NkwxMCAxMS44MjggNS43NTcgNy41ODYgNC4zNDMgOSAxMCAxNC42NTcgMTUuNjU3IDlsLTEuNDE0LTEuNDE0eiIgZmlsbD0iI2ZmZmZmZiIgLz4KPC9zdmc+');
}

.emotion-1 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-2 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 0;
  padding: 4px;
  padding-left: 6px;
  padding-right: 6px;
  border-radius: 2px;
  background-color: #3b3b3b;
  color: #b3b3b3;
  line-height: 19px;
  font-size: 15px;
  font-family: Roboto Condensed;
  text-transform: uppercase;
}

.emotion-2:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-2[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-2:hover,
.emotion-2:focus {
  color: #ffffff;
}

<div
  className="emotion-3"
>
  <select
    className="emotion-0"
    defaultValue="range"
    onChange={[Function]}
  >
    <option
      value="range"
    >
      range
    </option>
    <option
      value="exists"
    >
      exists
    </option>
  </select>
  <div
    className="emotion-1"
  />
  <button
    className="emotion-2"
    onClick={[Function]}
    type="button"
  >
    Reset
  </button>
</div>
`;

exports[`<FilterReset /> should switch properly 1`] = `
.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-bottom: 8px;
}

.emotion-0 {
  padding: 4px;
  padding-left: 6px;
  padding-right: 26px;
  border-radius: 2px;
  background-color: #3b3b3b;
  color: #b3b3b3;
  line-height: 19px;
  font-size: 15px;
  font-family: Roboto Condensed;
  text-transform: uppercase;
  border: none;
  -moz-appearance: none;
  -webkit-appearance: none;
  background-image: url('data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAyMCAyMCI+CiAgPHBhdGggZD0iTTE0LjI0MyA3LjU4NkwxMCAxMS44MjggNS43NTcgNy41ODYgNC4zNDMgOSAxMCAxNC42NTcgMTUuNjU3IDlsLTEuNDE0LTEuNDE0eiIgZmlsbD0iI2IzYjNiMyIgLz4KPC9zdmc+');
  background-repeat: no-repeat,repeat;
  background-position: right top -2px;
  cursor: pointer;
}

.emotion-0:hover,
.emotion-0:focus {
  color: #ffffff;
  background-image: url('data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAyMCAyMCI+CiAgPHBhdGggZD0iTTE0LjI0MyA3LjU4NkwxMCAxMS44MjggNS43NTcgNy41ODYgNC4zNDMgOSAxMCAxNC42NTcgMTUuNjU3IDlsLTEuNDE0LTEuNDE0eiIgZmlsbD0iI2ZmZmZmZiIgLz4KPC9zdmc+');
}

.emotion-1 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-2 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 0;
  padding: 4px;
  padding-left: 6px;
  padding-right: 6px;
  border-radius: 2px;
  background-color: #3b3b3b;
  color: #b3b3b3;
  line-height: 19px;
  font-size: 15px;
  font-family: Roboto Condensed;
  text-transform: uppercase;
}

.emotion-2:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-2[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-2:hover,
.emotion-2:focus {
  color: #ffffff;
}

<div
  className="emotion-3"
>
  <select
    className="emotion-0"
    defaultValue="range"
    onChange={[Function]}
  >
    <option
      value="range"
    >
      range
    </option>
    <option
      value="exists"
    >
      exists
    </option>
  </select>
  <div
    className="emotion-1"
  />
  <button
    className="emotion-2"
    onClick={[Function]}
    type="button"
  >
    Reset
  </button>
</div>
`;

exports[`<FilterReset /> should switch properly 2`] = `
.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-bottom: 8px;
}

.emotion-0 {
  padding: 4px;
  padding-left: 6px;
  padding-right: 26px;
  border-radius: 2px;
  background-color: #3b3b3b;
  color: #b3b3b3;
  line-height: 19px;
  font-size: 15px;
  font-family: Roboto Condensed;
  text-transform: uppercase;
  border: none;
  -moz-appearance: none;
  -webkit-appearance: none;
  background-image: url('data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAyMCAyMCI+CiAgPHBhdGggZD0iTTE0LjI0MyA3LjU4NkwxMCAxMS44MjggNS43NTcgNy41ODYgNC4zNDMgOSAxMCAxNC42NTcgMTUuNjU3IDlsLTEuNDE0LTEuNDE0eiIgZmlsbD0iI2IzYjNiMyIgLz4KPC9zdmc+');
  background-repeat: no-repeat,repeat;
  background-position: right top -2px;
  cursor: pointer;
}

.emotion-0:hover,
.emotion-0:focus {
  color: #ffffff;
  background-image: url('data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAyMCAyMCI+CiAgPHBhdGggZD0iTTE0LjI0MyA3LjU4NkwxMCAxMS44MjggNS43NTcgNy41ODYgNC4zNDMgOSAxMCAxNC42NTcgMTUuNjU3IDlsLTEuNDE0LTEuNDE0eiIgZmlsbD0iI2ZmZmZmZiIgLz4KPC9zdmc+');
}

.emotion-1 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

<div
  className="emotion-2"
>
  <select
    className="emotion-0"
    defaultValue="exists"
    onChange={[Function]}
  >
    <option
      value="range"
    >
      range
    </option>
    <option
      value="exists"
    >
      exists
    </option>
  </select>
  <div
    className="emotion-1"
  />
</div>
`;
